# pybamm-tea

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  tea.py
.github/workflows/: test.yml
docs/: conf.py  index.rst
docs/source/api/: index.rst  tea.rst
examples/: Potentials and capacities.ipynb  capacities_and_potentials.ipynb  masses_and_volumes.ipynb  ragone.ipynb  stack_breakdown.py  stackbreakdown.ipynb
pybamm_tea/: __init__.py  init.py  tea.py
tests/: capacities_and_potentials.csv  capacities_and_potentials_dataframe.csv  masses_and_volumes.csv  stack_energy.csv  stack_energy_dataframe.csv  stack_energy_densities.csv  test.py  test_tea.py
