[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pybamm-tea"
authors = [{name = "Julian Evers", email = "julian.evers2@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "pydantic<2",
    "pyparsing",
]

[project.optional-dependencies]
dev = [
    'coverage',                 # Coverage checking
    'flake8>=3',                # Style checking
]
